Improve documentation and API status result
